<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:paddingStart="5dp"
    android:paddingEnd="5dp"
    android:paddingTop="8dp"
    android:paddingBottom="8dp"
    >

    <TextView
        android:id="@+id/txtCategoriaItemProductos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/categoria"
        android:textStyle="bold"
        android:textSize="17sp"/>

    <TextView
        android:id="@+id/txtSubcategoriaItemProductos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/txtCategoriaItemProductos"
        android:layout_marginStart="10dp"
        android:text="@string/subcategoria"
        android:textStyle="bold"
        android:textSize="17sp"
        />

    <TextView
        android:id="@+id/txtProductoItemProductos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtCategoriaItemProductos"
        android:text="@string/producto"
        android:textStyle="bold"
        android:textSize="17sp"
        />

    <TextView
        android:id="@+id/txtCantidadItemProductos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:layout_below="@id/txtProductoItemProductos"
        android:text="@string/cantidad"
        android:textSize="15sp"/>

    <TextView
        android:id="@+id/txtPrecioUnitarioItemProductos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:layout_marginStart="30dp"
        android:layout_toEndOf="@id/txtCantidadItemProductos"
        android:layout_below="@id/txtProductoItemProductos"
        android:text="@string/precioUnitario"
        android:textSize="15sp"/>

    <ImageView
        android:id="@+id/imgRemoveItem"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:src="@drawable/icons8_delete_96"
        android:layout_centerVertical="true"/>
</RelativeLayout>