<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <CheckedTextView
        android:id="@+id/item_producto_agregar_pedido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:textAllCaps="true"
        tools:text="@string/producto"
        android:checkMark="?android:attr/listChoiceIndicatorMultiple"
        android:gravity="center"/>

    <EditText
        android:id="@+id/etCantidadProductoPedido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:hint="@string/hintAgregarProductoCantidad"
        android:inputType="number"
        android:layout_below="@id/item_producto_agregar_pedido"
        />

    <EditText
        android:id="@+id/etPrecioUnitarioAgregarProducto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:hint="@string/precioUnitarioEditText"
        android:layout_toEndOf="@id/etCantidadProductoPedido"
        android:layout_below="@id/item_producto_agregar_pedido"
        android:inputType="numberDecimal"
        />

</RelativeLayout>