<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mx.galaxcom.lumiereapp.activities.inventario.AgregarProductoActivity"
    android:id="@+id/layoutActivityAgregarProducto">

    <TextView
        android:id="@+id/txtAgregarProductoInventario"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/agregarProducto"
        android:textSize="27dp"
        android:textStyle="bold"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"/>

    <ExpandableListView
        android:id="@+id/lvAgregarProducto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtAgregarProductoInventario"
        android:layout_marginTop="25dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"></ExpandableListView>

    <EditText
        android:id="@+id/etCantidadAgregarProducto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lvAgregarProducto"
        android:hint="@string/hintAgregarProductoCantidad"
        android:inputType="number"
        android:layout_marginTop="37dp"
        android:layout_marginStart="10dp"/>

    <Button
        android:id="@+id/btnActualizarInventario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/agregar"
        android:layout_alignParentBottom="true"
        android:backgroundTint="@color/colorAccent"
        android:onClick="btnAgregarOnClick"/>
</RelativeLayout>
